# UIL-Scraper

./: Cargo.toml
src/: cli.rs  interactive.rs  main.rs  overall.rs  progress.rs  request.rs  scrape.rs
