[package]
name = "uil_scraper"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
itertools = "0.14.0"
minreq = { version = "2.13.3", features = ["punycode", "https"] }
rayon = "1.10.0"
scraper = "0.23.1"
supports-color = "3.0.2"
